--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "clsx": "^2.1.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -19,7 +26,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
